--- a/packages/tsuki-server/package.json
+++ b/packages/tsuki-server/package.json
@@ -5,5 +5,19 @@
   "main": "index.js",
   "author": "Gustavo Quinta - MoonTory",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "@types/express": "^4.16.1",
+    "@types/node": "^10.12.18",
+    "dotenv": "^6.2.0",
+    "ts-node": "^8.0.2",
+    "ts-node-dev": "^1.0.0-pre.32",
+    "typescript": "^3.2.4"
+  },
+  "dependencies": {
+    "express": "^4.16.4"
+  },
+  "scripts": {
+    
+  }
 }
