--- a/packages/tsuki-server-ts/package.json
+++ b/packages/tsuki-server-ts/package.json
@@ -6,20 +6,8 @@
   "author": "Gustavo Quinta - MoonTory",
   "license": "MIT",
   "private": true,
-  "devDependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/compression": "^0.0.36",
-    "@types/cookie-parser": "^1.4.1",
-    "@types/cors": "^2.8.4",
-    "@types/debug": "^0.0.31",
-    "@types/express": "^4.16.1",
-    "@types/helmet": "^0.0.42",
-    "@types/morgan": "^1.7.35",
-    "@types/node": "^10.12.18",
-    "dotenv": "^6.2.0",
-    "ts-node": "^8.0.2",
-    "ts-node-dev": "^1.0.0-pre.32",
-    "typescript": "^3.2.4"
+  "scripts": {
+    "start": "ts-node-dev --respawn -r dotenv/config src/bin/www.ts"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -29,9 +17,25 @@
     "debug": "^4.1.1",
     "express": "^4.16.4",
     "helmet": "^3.15.0",
-    "morgan": "^1.9.1"
+    "mongoose": "^5.4.7",
+    "morgan": "^1.9.1",
+    "reflect-metadata": "^0.1.13",
+    "typegoose": "^5.4.1"
   },
-  "scripts": {
-    "start": "ts-node-dev --respawn src/bin/www.ts"
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/compression": "^0.0.36",
+    "@types/cookie-parser": "^1.4.1",
+    "@types/cors": "^2.8.4",
+    "@types/debug": "^0.0.31",
+    "@types/express": "^4.16.1",
+    "@types/helmet": "^0.0.42",
+    "@types/mongoose": "^5.3.10",
+    "@types/morgan": "^1.7.35",
+    "@types/node": "^10.12.18",
+    "dotenv": "^6.2.0",
+    "ts-node": "^8.0.2",
+    "ts-node-dev": "^1.0.0-pre.32",
+    "typescript": "^3.2.4"
   }
 }
