--- a/packages/tsuki-server-ts/package.json
+++ b/packages/tsuki-server-ts/package.json
@@ -18,9 +18,7 @@
     "express": "^4.16.4",
     "helmet": "^3.15.0",
     "mongoose": "^5.4.7",
-    "morgan": "^1.9.1",
-    "reflect-metadata": "^0.1.13",
-    "typegoose": "^5.4.1"
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
