--- a/packages/tsuki-server-ts/tsconfig.json
+++ b/packages/tsuki-server-ts/tsconfig.json
@@ -13,7 +13,7 @@
     "noImplicitAny": true,
     "strictNullChecks": true,
     "strictFunctionTypes": true,
-    "noImplicitThis": true,
+    "noImplicitThis": false,
     "noUnusedLocals": true,
     "noUnusedParameters": false,
     "noImplicitReturns": true,
