--- a/packages/tsuki-server-ts/package.json
+++ b/packages/tsuki-server-ts/package.json
@@ -18,7 +18,8 @@
     "express": "^4.16.4",
     "helmet": "^3.15.0",
     "mongoose": "^5.4.7",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "typescript-require": "^0.2.10"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
