--- a/packages/tsuki-server-ts/package.json
+++ b/packages/tsuki-server-ts/package.json
@@ -17,9 +17,9 @@
     "debug": "^4.1.1",
     "express": "^4.16.4",
     "helmet": "^3.15.0",
+    "ioredis": "^4.6.2",
     "mongoose": "^5.4.7",
-    "morgan": "^1.9.1",
-    "typescript-require": "^0.2.10"
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -29,6 +29,7 @@
     "@types/debug": "^0.0.31",
     "@types/express": "^4.16.1",
     "@types/helmet": "^0.0.42",
+    "@types/ioredis": "^4.0.6",
     "@types/mongoose": "^5.3.10",
     "@types/morgan": "^1.7.35",
     "@types/node": "^10.12.18",
