--- a/packages/tsuki-server-ts/tsconfig.json
+++ b/packages/tsuki-server-ts/tsconfig.json
@@ -25,9 +25,7 @@
     "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "src/*": [
-        "*",
-      ]
+      "src/*": ["*"]
     },
     "rootDir": "src"
   },
