fix: Updated tsconfig.json

--- a/packages/tsuki-server-ts/tsconfig.json
+++ b/packages/tsuki-server-ts/tsconfig.json
@@ -27,7 +27,7 @@
     "paths": {
       "src/*": ["*"]
     },
-    "rootDir": "src"
+    "rootDir": "."
   },
   "exclude": ["node_modules"],
   "include": ["./src/**/*.tsx", "./src/**/*.ts"]
